--- a/client/package.json
+++ b/client/package.json
@@ -18,5 +18,10 @@
     "build": "npm-run-all build-css build-js",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "enzyme": "^3.2.0",
+    "enzyme-adapter-react-16": "^1.1.0",
+    "react-test-renderer": "^16.2.0"
   }
 }
