--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
     "start": "nodemon server.js --exec babel-node --presets es2015,stage-2",
     "build": "babel server.js -d dist --presets es2015,stage-2",
     "serve": "node dist/server.js",
-    "seed": "babel-node ./services/seeder.js --presets es2015,stage-2"
+    "seed": "babel-node ./services/seeder.js --presets es2015,stage-2",
+    "seed1": "babel-node ./services/seeder1.js --presets es2015,stage-2"
   },
   "dependencies": {
     "express": "^4.16.2",
