--- a/backend/package.json
+++ b/backend/package.json
@@ -9,14 +9,15 @@
     "build": "babel server.js -d dist --presets es2015,stage-2",
     "serve": "node dist/server.js",
     "seed": "babel-node ./services/seed-list.js --presets es2015,stage-2",
-    "seed:users": "babel-node ./services/seeder/users.js --presets es2015,stage-2",
-    "seed:ads": "babel-node ./services/seeder/ads.js --presets es2015,stage-2",
-    "seed:ratings": "babel-node ./services/seeder/ratings.js --presets es2015,stage-2",
-    "seed:notifications": "babel-node ./services/seeder/notifications.js --presets es2015,stage-2",
-    "seed:categories": "babel-node ./services/seeder/categories.js --presets es2015,stage-2",
-    "seed:subcategories": "babel-node ./services/seeder/subcategories.js --presets es2015,stage-2",
-    "seed:messages": "babel-node ./services/seeder/messages.js --presets es2015,stage-2",
-    "seed:threads": "babel-node ./services/seeder/threads.js --presets es2015,stage-2"
+    "seed:users": "babel-node ./services/seeder/executables/users.js --presets es2015,stage-2",
+    "seed:categories": "babel-node ./services/seeder/executables/categories.js --presets es2015,stage-2",
+    "seed:subcategories": "babel-node ./services/seeder/executables/subcategories.js --presets es2015,stage-2",
+    "seed:ads": "babel-node ./services/seeder/executables/ads.js --presets es2015,stage-2",
+    "seed:ratings": "babel-node ./services/seeder/executables/ratings.js --presets es2015,stage-2",
+    "seed:notifications": "babel-node ./services/seeder/executables/notifications.js --presets es2015,stage-2",
+    "seed:messages": "babel-node ./services/seeder/executables/messages.js --presets es2015,stage-2",
+    "seed:threads": "babel-node ./services/seeder/executables/threads.js --presets es2015,stage-2",
+    "seed:all": "babel-node ./services/seeder/executables/all.js --presets es2015,stage-2"
   },
   "dependencies": {
     "express": "^4.16.2",
@@ -34,3 +35,4 @@
     "nodemon": "^1.12.5"
   }
 }
+
