--- a/backend/package.json
+++ b/backend/package.json
@@ -5,34 +5,34 @@
   "author": "Miloš Tomšik",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js --exec babel-node --presets es2015,stage-2",
-    "build": "babel server.js -d dist --presets es2015,stage-2",
+    "start": "nodemon server.js --exec babel-node",
+    "build": "babel server.js -d dist",
     "serve": "node dist/server.js",
-    "seed:users": "babel-node ./services/seeder/executables/users.js --presets es2015,stage-2",
-    "seed:categories": "babel-node ./services/seeder/executables/categories.js --presets es2015,stage-2",
-    "seed:subcategories": "babel-node ./services/seeder/executables/subcategories.js --presets es2015,stage-2",
-    "seed:ads": "babel-node ./services/seeder/executables/ads.js --presets es2015,stage-2",
-    "seed:ratings": "babel-node ./services/seeder/executables/ratings.js --presets es2015,stage-2",
-    "seed:notifications": "babel-node ./services/seeder/executables/notifications.js --presets es2015,stage-2",
-    "seed:messages": "babel-node ./services/seeder/executables/messages.js --presets es2015,stage-2",
-    "seed:threads": "babel-node ./services/seeder/executables/threads.js --presets es2015,stage-2",
-    "seed:all": "babel-node ./services/seeder/executables/all.js --presets es2015,stage-2",
-    "seed": "babel-node ./services/seeder/executables/all.js --presets es2015,stage-2"
+    "seed:users": "babel-node ./services/seeder/executables/users.js",
+    "seed:categories": "babel-node ./services/seeder/executables/categories.js",
+    "seed:subcategories": "babel-node ./services/seeder/executables/subcategories.js",
+    "seed:ads": "babel-node ./services/seeder/executables/ads.js",
+    "seed:ratings": "babel-node ./services/seeder/executables/ratings.js",
+    "seed:notifications": "babel-node ./services/seeder/executables/notifications.js",
+    "seed:messages": "babel-node ./services/seeder/executables/messages.js",
+    "seed:threads": "babel-node ./services/seeder/executables/threads.js",
+    "seed:all": "babel-node ./services/seeder/executables/all.js",
+    "seed": "babel-node ./services/seeder/executables/all.js"
   },
   "dependencies": {
+    "apollo-server-express": "^1.3.2",
+    "body-parser": "^1.18.2",
     "express": "^4.16.2",
-    "express-graphql": "^0.6.11",
-    "graphiql": "^0.11.10",
-    "graphql": "^0.11.7",
-    "mongoose": "^4.13.7",
+    "graphql": "^0.12.3",
+    "graphql-tools": "^2.18.0",
+    "mongoose": "^4.13.9",
     "morgan": "^1.9.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-stage-3": "^6.24.1",
     "faker": "^4.1.0",
-    "nodemon": "^1.12.5"
+    "nodemon": "^1.14.11"
   }
 }
-
