--- a/backend/package.json
+++ b/backend/package.json
@@ -25,8 +25,10 @@
     "express": "^4.16.2",
     "graphql": "^0.12.3",
     "graphql-tools": "^2.18.0",
-    "mongoose": "^4.13.9",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "pg": "^7.4.1",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^4.32.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
