--- a/backend/package.json
+++ b/backend/package.json
@@ -23,8 +23,9 @@
     "apollo-server-express": "^1.3.2",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
-    "graphql": "^0.12.3",
+    "graphql": "0.11.7",
     "graphql-tools": "^2.18.0",
+    "merge-graphql-schemas": "^1.4.0",
     "morgan": "^1.9.0",
     "pg": "^7.4.1",
     "pg-hstore": "^2.3.2",
