--- a/backend/package.json
+++ b/backend/package.json
@@ -6,8 +6,7 @@
   "main": "server.js",
   "scripts": {
     "server": "nodemon server.js --exec babel-node",
-    "server:test": "TEST_DB_NAME=getbike_test babel-node server.js",
-    "test": "jest"
+    "test": "TEST_DB_NAME=getbike_test jest"
   },
   "dependencies": {
     "apollo-server-express": "^1.3.2",
@@ -23,9 +22,11 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-core": "^6.0.0",
+    "babel-jest": "^22.1.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-stage-3": "^6.24.1",
-    "faker": "^4.1.0",
+    "jest": "^22.1.4",
     "nodemon": "^1.14.11"
   }
 }
