--- a/backend/package.json
+++ b/backend/package.json
@@ -6,11 +6,14 @@
   "main": "server.js",
   "scripts": {
     "server": "nodemon server.js --exec babel-node",
+    "server:test": "TEST_DB_NAME=getbike_test babel-node server.js",
     "test": "TEST_DB_NAME=getbike_test jest"
   },
   "dependencies": {
     "apollo-server-express": "^1.3.2",
+    "axios": "^0.17.1",
     "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
     "express": "^4.16.2",
     "graphql": "0.11.7",
     "graphql-tools": "^2.18.0",
