--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "server": "nodemon server.js --exec babel-node",
     "server:test": "TEST_DB_NAME=getbike_test nodemon server.js --exec babel-node",
-    "test": "TEST_DB_NAME=getbike_test jest"
+    "test": "TEST_DB_NAME=getbike_test jest",
+    "seed": "babel-node ./seeder/seed.js",
+    "seed:test": "TEST_DB_NAME=getbike_test babel-node ./seeder/seed.js"
   },
   "dependencies": {
     "apollo-server-express": "^1.3.2",
