--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "express": "^4.16.2",
     "graphql": "0.11.7",
     "graphql-tools": "^2.18.0",
+    "jsonwebtoken": "^8.1.1",
     "merge-graphql-schemas": "^1.4.0",
     "morgan": "^1.9.0",
     "pg": "^7.4.1",
