--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.17.1",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
+    "dotenv": "^5.0.0",
     "express": "^4.16.2",
     "graphql": "0.11.7",
     "graphql-tools": "^2.18.0",
