added pass hashing

--- a/backend/app/.env
+++ b/backend/app/.env
@@ -4,7 +4,7 @@ DB_NAME_TEST=getbike_test
 DB_USERNAME=milostomsik
 DB_PASSWORD=null
 DB_HOST=localhost
-DB_DIALECT="postgres"
+DB_DIALECT=postgres
 
 GRAPHQL_ENDPOINT=/graphql
 
