--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "babel-plugin-styled-components": "^1.5.0",
     "next": "^5.0.0",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "styled-components": "^3.1.6"
   }
 }
