--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,12 @@
   "dependencies": {
     "babel-plugin-styled-components": "^1.5.0",
     "next": "^5.0.0",
+    "next-redux-wrapper": "^1.3.5",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-redux": "^5.0.7",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "styled-components": "^3.1.6"
   }
 }
